Applied Steve Goetze's patch for GROOVY-173 to provide security hooks for scripts & types and operations.
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@1064 a5544e8c-8a19-0410-ba12-f9af4593a198